--- a/testUI/testUI.csproj
+++ b/testUI/testUI.csproj
@@ -360,6 +360,9 @@
     <Compile Include="SSH\SSH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SSH\SshNetExtensions.cs" />
+    <EmbeddedResource Include="fMain.resx">
+      <DependentUpon>fMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
